@@ -1,5 +1,5 @@
 /*
- * Copyright 2016, 2018, 2019 Uppsala University Library
+ * Copyright 2016, 2018, 2019, 2024 Uppsala University Library
  *
  * This file is part of Cora.
  *
@@ -22,7 +22,6 @@ package se.uu.ub.cora.spider.role;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Stream;
 
 import se.uu.ub.cora.beefeater.authorization.Rule;
 import se.uu.ub.cora.beefeater.authorization.RuleImp;
@@ -30,6 +29,9 @@ import se.uu.ub.cora.beefeater.authorization.RulePartValuesImp;
 import se.uu.ub.cora.data.DataAtomic;
 import se.uu.ub.cora.data.DataChild;
 import se.uu.ub.cora.data.DataGroup;
+import se.uu.ub.cora.data.DataRecordGroup;
+import se.uu.ub.cora.data.DataRecordLink;
+import se.uu.ub.cora.storage.RecordNotFoundException;
 import se.uu.ub.cora.storage.RecordStorage;
 
 public class RulesProviderImp implements RulesProvider {
@@ -42,53 +44,48 @@ public class RulesProviderImp implements RulesProvider {
 
 	@Override
 	public List<Rule> getActiveRules(String roleId) {
-		DataGroup readRole = recordStorage.read(List.of("permissionRole"), roleId);
-		if (missingOrInactiveRole(readRole)) {
+		try {
+			DataRecordGroup readRole = recordStorage.read("permissionRole", roleId);
+			if (isInactiveRole(readRole)) {
+				return Collections.emptyList();
+			}
+			return getActiveRulesForRole(readRole);
+		} catch (RecordNotFoundException e) {
 			return Collections.emptyList();
 		}
-		return getActiveRulesForRole(readRole);
 	}
 
-	private boolean missingOrInactiveRole(DataGroup readRole) {
-		return roleNotFoundInStorage(readRole) || roleIsInactive(readRole);
+	private boolean isInactiveRole(DataRecordGroup readRole) {
+		return !dataContainsActiveStatusAsActive(readRole);
 	}
 
-	private boolean roleNotFoundInStorage(DataGroup readRole) {
-		return null == readRole;
-	}
-
-	private boolean roleIsInactive(DataGroup readRole) {
-		return !ruleIsActive(readRole);
-	}
-
-	private List<Rule> getActiveRulesForRole(DataGroup readRole) {
+	private List<Rule> getActiveRulesForRole(DataRecordGroup readRole) {
 		List<Rule> listOfRules = new ArrayList<>();
-		List<DataChild> children = readRole.getChildren();
-		Stream<DataChild> permissionRuleLinks = children.stream()
-				.filter(child -> "permissionRuleLink".equals(child.getNameInData()));
-
-		permissionRuleLinks.forEach(rule -> possiblyAddRuleToListOfRules(rule, listOfRules));
+		List<DataRecordLink> ruleLinks = readRole.getChildrenOfTypeAndName(DataRecordLink.class,
+				"permissionRuleLink");
+		for (DataRecordLink ruleLink : ruleLinks) {
+			possiblyAddRuleToListOfRules(ruleLink, listOfRules);
+		}
 		return listOfRules;
 	}
 
-	private void possiblyAddRuleToListOfRules(DataChild dataElementRule, List<Rule> listOfRules) {
-		DataGroup readRule = getLinkedRuleFromStorage(dataElementRule);
-		if (ruleIsActive(readRule)) {
+	private void possiblyAddRuleToListOfRules(DataRecordLink dataElementRule,
+			List<Rule> listOfRules) {
+		DataRecordGroup readRule = getLinkedRuleFromStorage(dataElementRule);
+		if (dataContainsActiveStatusAsActive(readRule)) {
 			addRuleToListOfRules(listOfRules, readRule);
 		}
 	}
 
-	private DataGroup getLinkedRuleFromStorage(DataChild dataElementRule) {
-		String ruleId = ((DataGroup) dataElementRule)
-				.getFirstAtomicValueWithNameInData("linkedRecordId");
-		return recordStorage.read(List.of("permissionRule"), ruleId);
+	private DataRecordGroup getLinkedRuleFromStorage(DataRecordLink ruleLink) {
+		return recordStorage.read("permissionRule", ruleLink.getLinkedRecordId());
 	}
 
-	private boolean ruleIsActive(DataGroup readRule) {
+	private boolean dataContainsActiveStatusAsActive(DataRecordGroup readRule) {
 		return "active".equals(readRule.getFirstAtomicValueWithNameInData("activeStatus"));
 	}
 
-	private void addRuleToListOfRules(List<Rule> listOfRules, DataGroup readRule) {
+	private void addRuleToListOfRules(List<Rule> listOfRules, DataRecordGroup readRule) {
 		Rule rule = new RuleImp();
 		listOfRules.add(rule);
 
@@ -99,7 +96,7 @@ public class RulesProviderImp implements RulesProvider {
 		addAllWritePermissionsToReadPermissionsAsReadIsImplied(rule);
 	}
 
-	private void addRulePartsToRule(Rule rule, DataGroup readRule) {
+	private void addRulePartsToRule(Rule rule, DataRecordGroup readRule) {
 		List<DataGroup> permissionRuleParts = readRule
 				.getAllGroupsWithNameInData("permissionRulePart");
 		permissionRuleParts.forEach(rulePart -> addRulePartToRule(rulePart, rule));
@@ -112,16 +109,15 @@ public class RulesProviderImp implements RulesProvider {
 
 	private RulePartValuesImp createRulePartValuesForRulePart(DataGroup rulePart) {
 		RulePartValuesImp ruleValues = new RulePartValuesImp();
-		List<DataChild> children = rulePart.getChildren();
-		children.forEach(ruleValue -> ruleValues.add(((DataAtomic) ruleValue).getValue()));
+		List<DataChild> rulePartsValues = rulePart.getChildren();
+		rulePartsValues.forEach(ruleValue -> ruleValues.add(((DataAtomic) ruleValue).getValue()));
 		return ruleValues;
 	}
 
-	private void addTermRulePartToRule(Rule rule, DataGroup readRule) {
+	private void addTermRulePartToRule(Rule rule, DataRecordGroup readRule) {
 		List<DataGroup> permissionTermRuleParts = readRule
 				.getAllGroupsWithNameInData("permissionTermRulePart");
 		permissionTermRuleParts.forEach(rulePart -> addTermRulePartToRule(rulePart, rule));
-
 	}
 
 	private void addTermRulePartToRule(DataGroup ruleTermPart, Rule rule) {
@@ -135,20 +131,21 @@ public class RulesProviderImp implements RulesProvider {
 	}
 
 	private String getPermissionKeyForRuleTermPart(DataGroup ruleTermPart) {
-		DataGroup internalRule = ruleTermPart.getFirstGroupWithNameInData("rule");
-		String permissionTermId = internalRule.getFirstAtomicValueWithNameInData("linkedRecordId");
-		DataGroup permissionTerm = recordStorage.read(List.of("collectTerm"), permissionTermId);
+		DataRecordLink permissionTermRuleLink = ruleTermPart
+				.getFirstChildOfTypeAndName(DataRecordLink.class, "rule");
+		DataRecordGroup permissionTerm = recordStorage.read("collectTerm",
+				permissionTermRuleLink.getLinkedRecordId());
 		DataGroup extraData = permissionTerm.getFirstGroupWithNameInData("extraData");
 		return extraData.getFirstAtomicValueWithNameInData("permissionKey");
 	}
 
-	private void possiblyAddReadPermissions(Rule rule, DataGroup readRule) {
+	private void possiblyAddReadPermissions(Rule rule, DataRecordGroup readRule) {
 		if (readRule.containsChildWithNameInData("readPermissions")) {
 			addReadPermissions(rule, readRule);
 		}
 	}
 
-	private void addReadPermissions(Rule rule, DataGroup readRule) {
+	private void addReadPermissions(Rule rule, DataRecordGroup readRule) {
 		DataGroup readPermissions = readRule.getFirstGroupWithNameInData("readPermissions");
 		for (DataAtomic readPermission : readPermissions
 				.getAllDataAtomicsWithNameInData("readPermission")) {
@@ -156,13 +153,13 @@ public class RulesProviderImp implements RulesProvider {
 		}
 	}
 
-	private void possiblyAddWritePermissions(Rule rule, DataGroup readRule) {
+	private void possiblyAddWritePermissions(Rule rule, DataRecordGroup readRule) {
 		if (readRule.containsChildWithNameInData("writePermissions")) {
 			addWritePermissions(rule, readRule);
 		}
 	}
 
-	private void addWritePermissions(Rule rule, DataGroup readRule) {
+	private void addWritePermissions(Rule rule, DataRecordGroup readRule) {
 		DataGroup writePermissions = readRule.getFirstGroupWithNameInData("writePermissions");
 		for (DataAtomic writePermission : writePermissions
 				.getAllDataAtomicsWithNameInData("writePermission")) {
@@ -176,9 +173,7 @@ public class RulesProviderImp implements RulesProvider {
 		}
 	}
 
-	public RecordStorage getRecordStorage() {
-		// needed for test
+	public RecordStorage onlyForTestGetRecordStorage() {
 		return recordStorage;
 	}
-
 }
